2015-09-09  David Hyatt  <hyatt@apple.com>

        REGRESSION: Inline-block baseline is wrong when zero-width replaced child is present
        https://bugs.webkit.org/show_bug.cgi?id=147452
        rdar://problem/21943074

        Reviewed by Myles Maxfield.

        * fast/inline-block/baseline-with-zero-width-replaced-child-expected.html: Added.
        * fast/inline-block/baseline-with-zero-width-replaced-child.html: Added.

2015-09-08  Chris Dumez  <cdumez@apple.com>

        document.importNode(node, deep): deep's default value should be false
        https://bugs.webkit.org/show_bug.cgi?id=148959
        <rdar://problem/22558915>

        Reviewed by Alexey Proskuryakov.

        * fast/dom/document-importNode-arguments.html:
        Explicitly pass deep parameter as the test wants a deep clone.

2015-09-07  Daniel Bates  <dabates@apple.com>

        ASSERT_WITH_SECURITY_IMPLICATION in WebCore::DocumentOrderedMap::get(); update form
        association after subtree insertion
        https://bugs.webkit.org/show_bug.cgi?id=148919
        <rdar://problem/21868036>

        Reviewed by Andy Estes.

        Add tests to ensure that updating the form association of a form control in a subtree
        does not cause an assertion failure.

        * fast/forms/update-form-owner-in-moved-subtree-assertion-failure-2-expected.txt: Added.
        * fast/forms/update-form-owner-in-moved-subtree-assertion-failure-2.html: Added.
        * fast/forms/update-form-owner-in-moved-subtree-assertion-failure-3-expected.txt: Added.
        * fast/forms/update-form-owner-in-moved-subtree-assertion-failure-3.html: Added.
        * fast/forms/update-form-owner-in-moved-subtree-assertion-failure-4-expected.txt: Added.
        * fast/forms/update-form-owner-in-moved-subtree-assertion-failure-4.html: Added.
        * fast/forms/update-form-owner-in-moved-subtree-assertion-failure-expected.txt: Added.