@@ -1,3 +1,13 @@
+2015-09-09  Alexey Proskuryakov  <ap@apple.com>
+
+        fast/dom/rtl-scroll-to-leftmost-and-resize.html is a flaky timeout - IPC drops messages
+        https://bugs.webkit.org/show_bug.cgi?id=148951
+
+        Reviewed by Anders Carlsson.
+
+        * platform/mac-wk2/TestExpectations: Unmark the test (it still fails per platform/mac
+        expectations, which is unrelated).
+
 2015-09-09  David Hyatt  <hyatt@apple.com>
 
         REGRESSION: Inline-block baseline is wrong when zero-width replaced child is present
